--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -26,9 +26,17 @@
 	{% includeCssFile "css/style.css" %}
 
 
+
+
+
+
 </head>
 
-<body>
+<body class="planecursor">
+
+
+
+
 	<div id="container">
 
 		<main id="content" role="main">
