--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -61,6 +61,7 @@ stuff here
 {% includeJsFile "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" %}
 {% includeJsFile "js/instafeed.min.js" %}
 {% includeJsFile "js/owl.carousel.min.js" %}
+{% includeJsFile "js/jquery.waypoints.min.js" %}
 {% includeJsFile "js/main.js" %}
 
 </body>
