--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ img#image{
 }
 
 nav{
-  background: blue;
+  background: #031191;
   width: 100%;
   height: 77px;
   margin-top: 10px;
@@ -114,8 +114,8 @@ img.logo{
 
 
 .contact-items{
-  padding-top: 194px;
-  padding-bottom: 176px;
+  padding-top: 130px;
+  padding-bottom: 130px;
   text-align: center;
   width: 100%;
   margin: 0 auto;
