--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -65,5 +65,13 @@ stuff here
 {% includeJsFile "js/jquery.waypoints.min.js" %}
 {% includeJsFile "js/main.js" %}
 
+
+<script src="https://widgets.resy.com/embed.js"></script>
+<script>
+    resyWidget.addButton(document.getElementById('resyButton-w6cxoffp'), {"venueId":661,"apiKey":"5Sbh49jsnE05KjGFluXWWCTKXwYvF6qV","replace":true});
+</script>
+
+
+
 </body>
 </html>
